--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,25 +6,25 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #a064ff;
+  --ifm-color-primary-dark: #8940ff;
+  --ifm-color-primary-darker: #7c2bff;
+  --ifm-color-primary-darkest: #4f00cd;
+  --ifm-color-primary-light: #b240c4;
+  --ifm-color-primary-lighter: #dc5fef;
+  --ifm-color-primary-lightest: hsl(292, 100%, 76%);
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
-[data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+[data-theme="dark"] {
+  --ifm-color-primary: #a064ff;
+  --ifm-color-primary-dark: #8940ff;
+  --ifm-color-primary-darker: #7c2bff;
+  --ifm-color-primary-darkest: #4f00cd;
+  --ifm-color-primary-light: #b240c4;
+  --ifm-color-primary-lighter: #dc5fef;
+  --ifm-color-primary-lightest: hsl(292, 100%, 76%);
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
