--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -21,3 +21,9 @@
   align-items: center;
   justify-content: center;
 }
+.button {
+  background-color: rgb(255, 185, 135);
+}
+.button:hover {
+  background-color: rgb(255, 201, 114);
+}
